--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,35 @@
+@import "normalize.css";
+
 body {
-  background-color: gray;
+  background-color: rgb(42, 42, 42);
+  font-family: 'Roboto', sans-serif;
+  height: 100vh
+}
+
+.main {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.landing {
+  font-size: x-large;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 10%;
+}
+
+.heading {
+  color: white;
+  font-weight: 300;
+}
+
+button {
+  cursor: pointer;
+  padding: .25rem 1.25rem;
+  border: none;
+  border-radius: .4rem;
 }
