--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 body {
   background-color: rgb(42, 42, 42);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   height: 100vh;
 }
 
@@ -20,24 +20,69 @@ body {
   flex-direction: column;
   align-items: center;
   padding-bottom: 10%;
+
+  .heading {
+    font-weight: 300;
+    color: white;
+    margin: 1.5rem 0;
+  }
+
+  button {
+    cursor: pointer;
+    padding: 0.5rem 1.75rem;
+    border: none;
+    border-radius: 0.4rem;
+    background: rgb(60, 60, 60);
+    color: white;
+    font-size: large;
+  }
+
+  button:hover {
+    background-color: rgb(66, 66, 66);
+  }
 }
 
-.heading {
-  font-weight: 300;
-  color: white;
-  margin: 1.5rem 0;
-}
+.game {
+  display: flex;
+  gap: 10rem;
 
-button {
-  cursor: pointer;
-  padding: .5rem 1.75rem;
-  border: none;
-  border-radius: .4rem;
-  background: rgb(60, 60, 60);
-  color: white;
-  font-size: large;
-}
+  --cell-size: 2.5rem;
 
-button:hover {
-  background-color: rgb(66, 66, 66);
+  .player {
+    h1 {
+      font-weight: 300;
+      color: white;
+    }
+    .playerBoard {
+      display: grid;
+      grid-template-columns: repeat(10, var(--cell-size));
+      border-right: 1px solid white;
+      border-bottom: 1px solid white;
+    }
+  }
+
+  .computer {
+    h1 {
+      font-weight: 300;
+      color: white;
+    }
+    .computerBoard {
+      display: grid;
+      grid-template-columns: repeat(10, var(--cell-size));
+      border-right: 1px solid white;
+      border-bottom: 1px solid white;
+    }
+  }
+
+  .cell {
+    width: var(--cell-size);
+    height: var(--cell-size);
+    border-left: 1px solid white;
+    border-top: 1px solid white;
+  }
+
+  .cell:hover {
+    cursor: pointer;
+    background-color: white;
+  }
 }
