feat(ship placement): hover, highlight
startPlace() shows how to place a given shipLength and orientation

--- a/src/styles.css
+++ b/src/styles.css
@@ -82,6 +82,10 @@ body {
     background-color: white;
   }
 
+  .cell.highlighted {
+    background-color: white;
+  }
+
   .player.cell.hasShip {
     cursor: default;
     background-color: rgb(51, 196, 92);
