--- a/src/styles.css
+++ b/src/styles.css
@@ -9,9 +9,9 @@ body {
 .main {
   height: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 10rem;
 }
 
 .landing {
@@ -43,69 +43,98 @@ body {
 }
 
 .game {
-  display: flex;
-  gap: 25vw;
-
-  --cell-size: 2.5rem;
-
-  .player, .computer {
+  margin-left: auto;
+  .boards {
+    margin-left: auto;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    h1 {
-      font-weight: 300;
-      color: white;
+    gap: 10vw;
+
+    --cell-size: 2.5rem;
+
+    .player,
+    .computer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      h1 {
+        font-weight: 300;
+        color: white;
+      }
+      .board {
+        display: grid;
+        grid-template-columns: repeat(10, var(--cell-size));
+      }
     }
-    .board {
-      display: grid;
-      grid-template-columns: repeat(10, var(--cell-size));
+
+    .cell {
+      width: var(--cell-size);
+      height: var(--cell-size);
+      border-left: 1px solid white;
+      border-top: 1px solid white;
+    }
+
+    .cell90,
+    .cell91,
+    .cell92,
+    .cell93,
+    .cell94,
+    .cell95,
+    .cell96,
+    .cell97,
+    .cell98,
+    .cell99 {
+      border-bottom: 1px solid white;
+    }
+
+    .cell9,
+    .cell19,
+    .cell29,
+    .cell39,
+    .cell49,
+    .cell59,
+    .cell69,
+    .cell79,
+    .cell89,
+    .cell99 {
+      border-right: 1px solid white;
+    }
+
+    .cell.canClick:hover {
+      cursor: pointer;
+      background-color: white;
+    }
+
+    .cell.highlighted {
+      background-color: white;
+    }
+
+    .player.cell.hasShip {
+      cursor: default;
+      background-color: rgb(51, 196, 92);
+    }
+
+    .cell.attacked {
+      cursor: default;
+      background-color: black;
+    }
+
+    .cell.hasShip.attacked {
+      cursor: default;
+      background-color: rgb(240, 41, 41);
     }
   }
+}
 
-  .cell {
-    width: var(--cell-size);
-    height: var(--cell-size);
-    border-left: 1px solid white;
-    border-top: 1px solid white;
-  }
-
-  .cell90,.cell91,.cell92,.cell93,.cell94,.cell95,.cell96,.cell97,.cell98,.cell99 {
-    border-bottom: 1px solid white;
-  }
-
-  .cell9,.cell19,.cell29,.cell39,.cell49,.cell59,.cell69,.cell79,.cell89,.cell99 {
-    border-right: 1px solid white;
-  }
-
-  .cell.canClick:hover {
-    cursor: pointer;
-    background-color: white;
-  }
-
-  .cell.highlighted {
-    background-color: white;
-  }
-
-  .player.cell.hasShip {
-    cursor: default;
-    background-color: rgb(51, 196, 92);
-  }
-
-  .cell.attacked {
-    cursor: default;
-    background-color: black;
-  }
-
-  .cell.hasShip.attacked {
-    cursor: default;
-    background-color: rgb(240, 41, 41);
-  }
+.menu {
+  background-color: white;
+  width: 20%;
+  height: 100%;
 }
 
 .gameOver {
   z-index: 9999;
   position: fixed;
-  background-color: rgba(0,0,0,.75);
+  background-color: rgba(0, 0, 0, 0.75);
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -113,7 +142,8 @@ body {
   justify-content: center;
   align-items: center;
 
-  h1, h2 {
+  h1,
+  h2 {
     margin: 0;
     padding: 0;
     font-weight: 300;
