refactor(cell): change class .hasShip to .showShip
- .cell elements belonging to player now have .showShip class
- computer cell elements no longer have .hasShip class

--- a/src/styles.css
+++ b/src/styles.css
@@ -108,7 +108,7 @@ body {
       background-color: white;
     }
 
-    .player.cell.hasShip {
+    .cell.showShip {
       cursor: default;
       background-color: rgb(51, 196, 92);
     }
